--- a/css/styles.css
+++ b/css/styles.css
@@ -281,24 +281,26 @@ body {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
+/**=============FEATURES=============**/
+
 .features-section {
     padding-bottom: 0;
     background-color: var(--main-white-color);
 }
 
-.features-list {
+.features {
     display: flex;
 }
 
-.features-list-item + .features-list-item {
+.feature + .feature {
     margin-left: var(--ul-items-gap);
 }
 
-.features-list-item {
+.feature {
     flex-basis: calc((100% - 90px) / 4);
 }
 
-.features-item-icon {
+.feature__image {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -308,12 +310,12 @@ body {
     background-color: #F5F4FA;
 }
 
-.feature-icon {
+.feature__icon {
     width: 70px;
     height: 70px;
 }
 
-.features-list-title {
+.feature__title {
     margin-bottom: 10px;
     font-weight: 700;
     font-size: 14px;
@@ -322,7 +324,7 @@ body {
     text-transform: uppercase;
 }
 
-.features-list-descr {
+.feature__descr {
     font-size: 14px;
     line-height: calc(24 / 14);
     letter-spacing: 0.03em;
@@ -333,26 +335,26 @@ body {
     background-color: var(--main-white-color);
 }
 
-.activities-list {
+.activities {
     display: flex;
 }
 
-.activities-list-item + .activities-list-item {
+.activity + .activity {
     margin-left: var(--ul-items-gap);
 }
 
-.activities-list-item {
+.activity {
     flex-basis: calc(( 100% - 60px) / 3);
 }
 
-.activity-link {
+.activity__link {
     position: relative;
     text-align: center;
     font-weight: 700;
     color: var(--main-white-color);
 }
 
-.overlay-box {
+.activity__overlay {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -362,15 +364,15 @@ body {
     background-color: rgba(47, 48, 58, 0.8);
 }
 
-.overlay-text {
+.activity__title {
     font-size: 14px;
     line-height: calc(16 / 14);
     text-transform: uppercase;
 }
 
-.activities-section-title,
+.activities-section__title,
 .team-section-title,
-.clients-section-title {
+.clients-section__title {
     margin-bottom: 50px;
     font-weight: 700;
     font-size: 36px;
@@ -471,12 +473,12 @@ body {
     height: 20px;
 }
 
-.clients-list {
+.clients {
     display: flex;
     gap: 30px;
 }
 
-.client-item-link {
+.clients__link {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -490,24 +492,24 @@ body {
     transition-timing-function: var(--transition-function);
 }
 
-.client-link-icon {
+.clients__icon {
     width: 106px;
     height: 60px;
 }
 
-.client-item-link svg {
+.clients__link svg {
     transition-property: fill;
     transition-duration: var(--transition-dur);
     transition-timing-function: var(--transition-function);
 }
 
-.client-item-link:hover svg,
-.client-item-link:focus svg {
+.clients__link:hover svg,
+.clients__link:focus svg {
     fill: var(--accent-color);
 }
 
-.client-item-link:hover,
-.client-item-link:focus {
+.clients__link:hover,
+.clients__link:focus {
     border: 1px solid var(--accent-color);
 }
 
