--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,5 +14,5 @@
 @import './components/container';
 @import './components/general-btn';
 @import './components/header';
-
+@import './components/logo';
 
