--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,7 +12,6 @@
 
 @import './components/section';
 @import './components/container';
-@import './components/general-btn';
+@import './components/buttons';
 @import './components/header';
 @import './components/logo';
-
