--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -31,5 +31,27 @@
     }
 }
 
+.filtr-btn {
+    flex-basis: calc((100% - 32px) / 5);
+    border-style: none;
+    border-radius: 4px;
+    font-family: Roboto;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: calc(26 / 16);
+    text-align: center;
+    letter-spacing: 0.03em;
+    background-color: var(--bgr-color);
+
+    padding-top: 6px;
+    padding-right: 22px;
+    padding-bottom: 6px;
+    padding-left: 22px;
+
+    transition-property: color, background-color, box-shadow;
+    transition-duration: var(--transition-dur);
+    transition-timing-function: var(--transition-function);
+}
+
 
 
