--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,3 +15,11 @@
 @import './components/buttons';
 @import './components/header';
 @import './components/logo';
+@import './components/hero';
+@import './components/features';
+@import './components/activities';
+@import './components/team';
+@import './components/clients';
+@import './components/footer';
+@import './components/modal';
+@import './components/portfolio';
