--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,6 +7,17 @@ body {
     color: var(--main-text-color);
 }
 
+.activities-section__title,
+.team-section-title,
+.clients-section__title {
+    margin-bottom: 50px;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: calc(42 / 36);
+    text-align: center;
+    letter-spacing: 0.03em;
+}
+
 .btn {
     cursor: pointer;
 }
