--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -14,6 +14,15 @@
 .feature {
     flex-basis: calc((100% - 90px) / 4);
 
+    &__title {
+        margin-bottom: 10px;
+        font-weight: 700;
+        font-size: 14px;
+        line-height: calc(16 / 14);
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+    }
+
     &__image {
         display: flex;
         align-items: center;
