--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -53,5 +53,9 @@
     transition-timing-function: var(--transition-function);
 }
 
-
-
+.footer-form-btn {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    padding: 10px 28px;
+}
