--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -16,3 +16,8 @@
 .logo-web {
     color: var(--accent-color);
 }
+
+.logo-footer {
+    margin-bottom: 20px;
+    color: var(--main-white-color);
+}
