--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,25 +1,25 @@
 .clients {
     display: flex;
     gap: 30px;
-}
 
-.clients__link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 170px;
-    height: 92px;
-    border: 1px solid #AFB1B8;
-    border-radius: 4px;
+    &__link {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 170px;
+        height: 92px;
+        border: 1px solid #AFB1B8;
+        border-radius: 4px;
+    
+        transition-property: border;
+        transition-duration: var(--transition-dur);
+        transition-timing-function: var(--transition-function);
+    }
 
-    transition-property: border;
-    transition-duration: var(--transition-dur);
-    transition-timing-function: var(--transition-function);
-}
-
-.clients__icon {
-    width: 106px;
-    height: 60px;
+    &__icon {
+        width: 106px;
+        height: 60px;
+    }
 }
 
 .clients__link svg {
