--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,12 +14,18 @@
 @import './components/container';
 @import './components/buttons';
 @import './components/header';
+@import './components/header-nav';
+@import './components/header-contacts';
 @import './components/logo';
 @import './components/hero';
 @import './components/features';
 @import './components/activities';
 @import './components/team';
+@import './components/social-links';
 @import './components/clients';
 @import './components/footer';
+@import './components/footer-contacts';
+@import './components/footer-form';
+@import './components/backdrop';
 @import './components/modal';
 @import './components/portfolio';
